--- a/practice/05/css/ui.css
+++ b/practice/05/css/ui.css
@@ -82,7 +82,7 @@ footer > a.insta:hover{background:url(../images/social_b_instar_hover.png) no-re
 
 /* 04 */
 /* 우선순위가 가장 높은 것은 !important */
-#container .content.this{width: 100%; left: 0 !important;}
+#container .content.this{width: 100%; left: 0 !important; height:100%; overflow:hidden; overflow-y:auto;}
 #container .content.prev{width: 100%; left: -100% !important;}
 #container .content.next{width: 100%; left: 100%s !important;}
 /* this 선택했을 때 before, after 다 안 보이게 하는 설정인가? */
@@ -102,3 +102,26 @@ footer > a.insta:hover{background:url(../images/social_b_instar_hover.png) no-re
 #container .content:nth-of-type(3){transition-delay:.6s;}
 #container .content:nth-of-type(4){transition-delay:.8s;}
 #container.start .content{top:0;}
+
+/* 05 */
+.paragrph_tit{margin-bottom: 50px; font-size: 24px; color: #fff; position: relative;}
+.paragrph_tit:after{content: ""; display: block; width: 30px; height: 8px; background: #70c8d8; position: absolute; left: 0; bottom: -10px;}
+.text_box h4{font-size:40px; color:#3d3d3d; font-weight:700;}
+.text_box p{margin-bottom:50px; color:#15144e; line-height:20px;}
+
+#container .content.this .conbox{max-width:1100px; margin:0 auto;}
+/* 가상 클래스 선택자 nth-child, 홀수: odd, 짝수: even */
+.text_box:nth-child(odd){text-align: left;}
+.text_box:nth-child(even){text-align: right;}
+
+.text_box{position:relative;}
+
+.text_box:nth-child(1):after{content: ""; display: block;  width:206px; height:100%; position:absolute; right:0; top:0; background:url(../images/content_img1.png) no-repeat right top; background-size:206px auto;}
+.text_box:nth-child(1) p{width:100%; padding-right:206px;}
+/* 가장 마지막 태그부터 순서를 찾는 가상 클래스 선택자 */
+.text_box:nth-last-child(1):before{content:""; display:block; width:150px; height:250px; position:absolute; left:0; top:70px; background:url(../images/content_img2.png) no-repeat right top; background-size:150px;}
+.text_box:nth-last-child(1):after{content:""; display:block; width:170px; height:280px; position:absolute; right:0; top:-20px; background:url(../images/content_img3.png) no-repeat right top; background-size:170px;}
+.text_box:nth-last-child(1) p{padding:0 200px 0 280px;}
+.text_box:nth-last-child(1) h4{color:#5a008f;}
+
+#container .content.this .conbox .content_wrap{padding:30px 50px 50px 50px; opacity:1; transition:all 1.7s; transition-delay:.8s;}
